manifests/default-networkpolicy.yaml
#
# Description: Network policies for the 'default' namespace
#
# To manually apply:
#   kubectl apply -f ./manifests/default-networkpolicy.yaml
#
# See: https://docs.k3s.io/security/hardening-guide#networkpolicies
#
---
# Allow ingress from kube-system namespace, deny all others
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-kube-system-ingress
  namespace: default
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              # Use the immutable label 'kubernetes.io/metadata.name' set on the namespace by the control plane
              kubernetes.io/metadata.name: kube-system
  policyTypes:
    - Ingress
---
